Hooda Salah First Commit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFBD1816</color>
+    <color name="green">#FF378805</color>
+    <color name="cardViewBackground">#FFC5C5C5</color>
+    <color name="primaryColor">#FF7f80d3</color>
 </resources>
