Test Branch Locale Commit

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:text="@string/signUp"
         android:textColor="@color/primarycolor"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,10 +144,10 @@
         android:id="@+id/log_Btn"
         android:layout_width="153dp"
         android:layout_height="50dp"
-        android:text="Log in"
+        android:text="@string/logIn"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
@@ -157,10 +157,10 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="251dp"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:text="@string/LetParkText"
         android:textColor="@color/primary"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
