--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Reply Preference -->
     <string-array name="language_entries">
-        <item>English</item>
-        <item>Arabic</item>
+        <item>@string/english</item>
+        <item>@string/arabic</item>
     </string-array>
 </resources>
