--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/NewDriver"
+        android:text="@string/newDriver"
         android:textColor="@color/primary"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -82,9 +82,9 @@
         android:id="@+id/loginIntent_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/RegIntentText"
+        android:text="@string/signUp"
         android:textColor="@color/primarycolor"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
             android:id="@+id/log_email"
             android:layout_width="300dp"
             android:layout_height="60dp"
-            android:hint="@string/RegisterEmail" />
+            android:hint="@string/email" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -134,7 +134,7 @@
             android:id="@+id/log_password"
             android:layout_width="300dp"
             android:layout_height="60dp"
-            android:hint="@string/LoginPassword"
+            android:hint="@string/password"
             android:inputType="textPassword"
 
             />
@@ -144,10 +144,10 @@
         android:id="@+id/log_Btn"
         android:layout_width="153dp"
         android:layout_height="50dp"
-        android:text="Log in"
+        android:text="@string/logIn"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
@@ -157,12 +157,10 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="251dp"
-        android:layout_height="80dp"
-        android:text="Let's Park Your
-
-        Car Now"
+        android:layout_height="wrap_content"
+        android:text="@string/LetParkText"
         android:textColor="@color/primary"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
