--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -16,18 +16,25 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/ic_user_icon" />
+            android:layout_marginTop="25dp" />
 
         <TextView
             android:id="@+id/textView_settings_userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mahmoud Salah"
-            android:textColor="@color/white"
-            android:layout_marginTop="40dp"
             android:layout_marginStart="10dp"
-            android:layout_toEndOf="@+id/imageView_settings_userImage"/>
+            android:layout_marginTop="40dp"
+            android:layout_toEndOf="@+id/imageView_settings_userImage"
+            android:textColor="@color/white" />
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/spinKit_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/SpinKitView.DoubleBounce"
+            android:visibility="visible"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"/>
 
     </RelativeLayout>
 
