--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".Fragments.HomeFragemt">
+    tools:context=".Fragments.HomeFragment">
 
  <fragment
      android:layout_width="match_parent"
