--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -29,12 +29,12 @@
 
         <com.github.ybq.android.spinkit.SpinKitView
             android:id="@+id/spinKit_settings"
+            style="@style/SpinKitView.DoubleBounce"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/SpinKitView.DoubleBounce"
-            android:visibility="visible"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"/>
+            android:layout_marginTop="25dp"
+            android:visibility="visible" />
 
     </RelativeLayout>
 
