--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context=".Fragments.HomeFragment">
-
- <fragment
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:id="@+id/google_map"
-      android:name="com.google.android.gms.maps.SupportMapFragment"/>
-
-</RelativeLayout>
+    android:id="@+id/fragment_google_map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    map:mapType="normal"
+    tools:context=".Fragments.HomeFragment"/>
