Git Desktop Commit
Git Desktop Commit

--- a/app/src/main/res/drawable/settings_background_shape.xml
+++ b/app/src/main/res/drawable/settings_background_shape.xml
@@ -3,5 +3,5 @@
     <corners
         android:bottomLeftRadius="100dp"
         android:bottomRightRadius="100dp" />
-    <solid android:color="@color/primarycolor" />
+    <solid android:color="@color/primaryVariant" />
 </shape>
