--- a/app/src/main/res/layout/activity_parking_place.xml
+++ b/app/src/main/res/layout/activity_parking_place.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primarycolor"
+    android:background="@color/primaryVariant"
     tools:context=".ParkingPlaceActivity">
 
     <ImageButton
@@ -97,6 +97,6 @@
         android:layout_centerVertical="true"
         android:indeterminate="true"
         app:indicatorSize="50dp"
-        app:indicatorColor="@color/primarycolor"/>
+        app:indicatorColor="@color/primaryVariant"/>
 
 </RelativeLayout>
