--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -147,7 +147,7 @@
             android:layout_marginStart="5dp"
             android:layout_toEndOf="@id/textView5"
             android:text="@string/logIn"
-            android:textColor="@color/primarycolor"
+            android:textColor="@color/primaryVariant"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -175,7 +175,7 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:layout_marginTop="10dp"
-        app:SpinKit_Color="@color/primarycolor"
+        app:SpinKit_Color="@color/primaryVariant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUp_btn" />
