--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,6 +21,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.07999998" />
 
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/spinKit_profile"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:visibility="visible"
+            app:SpinKit_Color="@color/primaryVariant"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.07999998"
+            style="@style/SpinKitView.DoubleBounce"/>
+
         <TextView
             android:id="@+id/retrieved_name"
             android:layout_width="wrap_content"
