--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,12 +142,13 @@
 
     <Button
         android:id="@+id/log_Btn"
-        android:layout_width="153dp"
-        android:layout_height="50dp"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
         android:text="@string/logIn"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="15sp"
+        android:textStyle="bold|italic"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
