--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -109,12 +109,13 @@
 
     <Button
         android:id="@+id/signUp_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
         android:text="@string/signUp"
         android:textAllCaps="false"
-        android:textSize="25sp"
+        android:textSize="15sp"
+        android:textStyle="italic|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
