--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -124,13 +124,14 @@
 
         <Button
             android:id="@+id/update_button"
-            android:layout_width="150dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:background="@drawable/round_button"
             android:enabled="false"
             android:text="@string/update"
             android:textAllCaps="false"
-            android:textSize="18sp"
+            android:textSize="15sp"
+            android:textStyle="italic|bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
