--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -74,6 +74,8 @@
             android:layout_centerInParent="true"
             android:background="@drawable/round_button"
             android:text="@string/logout"
+            android:textSize="15dp"
+            android:textStyle="bold|italic"
             android:textAllCaps="false" />
 
     </RelativeLayout>
