--- a/app/src/main/res/layout/activity_parking_place.xml
+++ b/app/src/main/res/layout/activity_parking_place.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryVariant"
+    android:id="@+id/parking_place_layout"
     tools:context=".ParkingPlaceActivity">
 
     <ImageButton
