--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,6 +37,8 @@
             android:id="@+id/reg_name"
             android:layout_width="300dp"
             android:layout_height="60dp"
+            android:maxLines="1"
+            android:inputType="textPersonName"
             android:hint="@string/name" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,6 +61,8 @@
             android:id="@+id/reg_email"
             android:layout_width="300dp"
             android:layout_height="60dp"
+            android:maxLines="1"
+            android:inputType="textEmailAddress"
             android:hint="@string/email" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,6 +86,7 @@
             android:layout_width="300dp"
             android:layout_height="60dp"
             android:hint="@string/password"
+            android:maxLines="1"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,6 +109,8 @@
             android:id="@+id/reg_phone"
             android:layout_width="300dp"
             android:layout_height="60dp"
+            android:maxLines="1"
+            android:inputType="phone"
             android:hint="@string/phone" />
     </com.google.android.material.textfield.TextInputLayout>
 
